# Finalize_page

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  todo  transação.csv  utils.py
app/: perguntas_frequentes.py
app/auth/: login_page copy.py  login_page.py
app/cookie_controller/: cookie_controller.py
app/pages/: home.py  perguntas_frequentes.py  sobre.py
app/portfolio/: app copy.py
app/portfolio/block/: block_dataframe.py  block_graphic.py  block_trading_history.py  buttons.py  render_carteiras.py
app/portfolio/dialog/: asset_transaction.py  delete_wallet.py  nova_carteira.py
app/portfolio/pages/: page_investidor_10.py
app/utils/: api_client.py  constants.py  date_utils.py  profitability.py  util.py
graphics/dividends/: plot_bar_dividends_received_history.py
