[tool.poetry]
name = "docker-with-streamlit"
version = "0.1.0"
description = ""
authors = ["guilhermebranddao <guilhermebranddao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
taskipy = "^1.14.1"
plotly = "^5.24.1"
streamlit-cookies-manager = "^0.2.0"
streamlit-cookies-controller = "^0.0.4"
streamlit-aggrid = "^1.0.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
run = "streamlit run app.py"
run_in_prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
run_etl = "python app/etl/main.py"
test = "pytest -v --disable-warnings"
kill = "kill -9 $(lsof -t -i:8000)"
freeze_req = "pip freeze >> requirements.txt"
freeze_req_dev = "pip freeze >> requirements-dev.txt"
